SONARIAC-1308 Shouldn't include next line into shifted issue's text range